--- a/konseptdokument/referanser.bib
+++ b/konseptdokument/referanser.bib
@@ -17,7 +17,7 @@ Management},
 }
 @misc{Scrum,
 	Author={Schwaver, Ken and Sutherland, Jeff},
-	Howpublished={\url{http://www.scrum.org/storage/scrumguides/Scrum%20Guide%20-%20NO.pdf#view=fit}},
+	url={http://www.scrum.org/storage/scrumguides/Scrum%20Guide%20-%20NO.pdf},
 	Year={2010}
 }
 
@@ -54,13 +54,13 @@ Management},
 	 Dave Thomas},
 	 year = {2001},
 	 title = {Manifesto for Agile Software Development},
-	url = {\url{http://agilemanifesto.org/}}
+	url = {http://agilemanifesto.org/}
 }
 
 @misc{sjanger,
 	Author={Thomas H. Apperley},
 	Title={Genre and game studies: Toward a critical approach to video game genres},
-	Year=2006,
+	Year={2006},
 	Howpublished={Sage Publications},
-	url={\url{http://sag.sagepub.com/content/37/1/6.full.pdf+html}}
+	url={http://sag.sagepub.com/content/37/1/6.full.pdf+html}
 }
