Add some about design

--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -1,5 +1,27 @@
-\section{Resultat}\label{sec:conclusion}
-Denne seksjonen vil gi en kort oppsumering av konseptet, diskutere spillets samfunnsnytte og forklare hva som er tenkt rundt videre arbeid.
+\section{Avslutning}\label{sec:conclusion}
+Denne seksjonen vil relatere prosjektet i forhold til spilldesign som
+felt og diskutere spillets samfunnsnytte og forklare hva som er tenkt
+rundt videre arbeid.
+
+\subsection{Garbarge Alert, i en større sammenheng}
+Spilldesign på et generelt nivå starter ofte med en idè, eller en
+modifisering av et eksisterende konsept. Prosessen videre varierer
+veldig fra utvikler til utvikler og selskap til selskap, men en del
+fellestrekk finnes:
+\begin{itemize}
+\item Definere spillbare elementer
+\item Nivådesign
+\item Innhold
+\item Mekanikk
+\end{itemize}
+Etterhvert som denne prosessen går videre er det vanlig å dokumentere
+alt i et designdokument. Dette dokumentet kan bli brukt som et rent
+oppslagsverk for utviklere, og vil konstant være i endring. En felles
+arbeidsflate for dette (en egen wiki eller lignende) blir også ofte brukt.
+
+Måten Re³ designet Garbarge Alert på, har klare trekk med den generelle
+spilldesign-metoden.
+
 
 \subsection{Spillets samfunnsnytte}
 Garbage Alert har som mål å belyse nytten av gjenbruk og resirkulering, lokalt og globalt, gjennom et flerspiller dataspill (se seksjon \ref{sec:problemstilling}).
