--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -4,7 +4,7 @@ Dette kapitelet forteller om et konsept som har blitt utviklet, de definisjoner
 og begrep som har blitt utviklet i forbindelse med spillet og selve
 spilldynamikken. I tillegg blir de ulike spillelementene forklart.
 
-\subsection{Introduksjon: Garbage Alert}
+\subsection{Introduksjon til \emph{Garbage Alert}}
 Garbage Alert er strategispillet hvor du bestemmer verdens skjebne gjennom å
 gjenvinne og krige med søppel. Spillet har resirkulering i sentrum
 samtidige som det skal være et underholdende strategispill for deg
