--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -1,6 +1,6 @@
 %!TEX root = report.tex
 \section{Grafisk fremstilling}\label{sec:artwork}
-Under vil den grafiske fremstillingen av Garbage Alert bli beskrevet
+Under vil den grafiske fremstillingen av \emph{Garbage Alert} bli beskrevet
 sammen med valgene som har blitt gjort. Dette vil illustreres med
 skjermskudd.
 
