--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -106,7 +106,7 @@ Både mur, våpen og miljøstasjon kan repareres. Prisen på en reparasjon tar e
 
 
 \subsubsection{Priser, helsepoeng og angrepsverdier}
-Under utviklingen og alfa-testingen av spillet har Re³ kommet frem til en prisliste, helsepoeng på våpen, mur og miljøstasjon samt attack-verdier for våpnene.
+Under utviklingen og alfa-testingen av spillet har Re³ kommet frem til en prisliste, helsepoeng på våpen, mur og miljøstasjon samt angrepsverdier for våpnene.
 
 Prislisten er utviklet slik at det hele tiden er knapt med ressurser. Det vil si at nesten alle bygninger og oppgraderinger blant annet koster noe papp, for at denne ressursen ikke skal hope seg opp. Utkastet av prislisten finnes i appendiks \ref{A}.
 
