--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -163,7 +163,7 @@ Spilleren med navnet Professor har valgt å kun fokusere på oppgraderinger knyt
 
 Spilleren MadMax velger å kjøre en aggresiv taktikk. Det første han gjør er å bygge et papirfly, slik at han allerede fra starten klarer å dumpe noe av søppelet sitt på de andre spillerne. Fordelen med et kjapt angrep er at spillerne som blir angrepet alltid vil ligge et skritt bak, og ikke kunne angripe han tilbake. Det første de andre spillerne vil gjøre etter et angrep er å sikre miljøstasjonen sin mot utslettelse ved å bygge en mur. MadMax kan dermed bruke ressursene sine på våpen hele tiden, mens de andre spillerne må fortsette å reparere og bygge muren sin. MadMax er avhengig av å utslette de andre spillerne eller sende bort alt søppelet sitt raskt. Hvis det tar for lang tid vil de andre spillerne etterhvert få bedre oppgraderinger, og MadMax sine angrep vil til slutt ikke kunne penetrere muren til de andre spillerne.
 
-Den tredje spilleren, N00b87, bestemmer seg for en defensiv og sikker spilltaktikk. Spilleren satser på å komme seg raskt gjennom oppgraderingene, samtidig som han hele tiden oppgraderer muren og våpnene sine. Ettersom N00b87 bruker ressurser på alt som er tilgjengelig bruker han lengre tid på å utvikle seg enn de andre spillerne. Men N00b87 er likevel godt sikret mot angrep, og kan raskt gjøre et motangrep som forhåpentligvis roer aggresiviteten til eventuelle angripere. Denne taktikken har få overaskelsesmomenter, men likevel anses dette som taktikken som oftest vil vinne. Men det er også mange momenter som fører til at denne ''sikre'' taktikken ikke vil vinne. Ettersom N00b87 ikke angriper så har Professor mulighet til å bli kvitt alt sitt søppel lenge før N00b87. Dersom MadMax angriper N00b87 helt fra starten, vil N00b87 slite med å komme seg gjennom planen sin. 
+Den tredje spilleren, N00b87, bestemmer seg for en defensiv og sikker spilltaktikk. Spilleren satser på å komme seg raskt gjennom oppgraderingene, samtidig som han hele tiden oppgraderer muren og våpnene sine. Ettersom N00b87 bruker ressurser på alt som er tilgjengelig bruker han lengre tid på å utvikle seg enn de andre spillerne. Men N00b87 er likevel godt sikret mot angrep, og kan raskt gjøre et motangrep som forhåpentligvis roer aggresiviteten til eventuelle angripere. Denne taktikken har få overaskelsesmomenter, men likevel anses dette som taktikken som oftest vil vinne. Men det er også mange momenter som fører til at denne ``sikre'' taktikken ikke vil vinne. Ettersom N00b87 ikke angriper så har Professor mulighet til å bli kvitt alt sitt søppel lenge før N00b87. Dersom MadMax angriper N00b87 helt fra starten, vil N00b87 slite med å komme seg gjennom planen sin. 
 
 Det er ingen taktikk som er best. Det er mange tilfeldigheter som kan snu spillet. Hvem blir angrepet? Blir en spiller angrepet av mange spillere er spilleren dømt fra starten. Globale og lokale katastrofer vil også bidra til å snu spillet, og kan til og med overraske den klare lederen av et spill. Det er tre spillere i eksempelet over, og det er helt åpent hvem som kan vinne!
 
@@ -265,13 +265,13 @@ For å gjøre spillet tilgjengelig for vår målgruppe er \emph{Garbage Alerts} 
 
 
 Det man først ser når man starter spillet er en introskjerm som med sin overdrevne grafikk og lydbilde er ment å sette spilleren i et kompetetivt sinnelag.
-Fra denne skjermen er det mulig å starte spillet ved å trykke på den store knappen markert ''Start''.
+Fra denne skjermen er det mulig å starte spillet ved å trykke på den store knappen markert ``Start''.
 En komplett versjon av spillet vil gi spilleren flere valg på introskjermen, som å endre spillernavn, samt gi muligheten til å koble flere spillere sammen i et flerspillerspill.
 
 
 Spillets hovedskjerm\footnote{Den delen av spillet hvor spillet faktisk spilles.} består av et overblikksbilde av alle øyene som er med i spillet. I prototypen er antallet begrenset til to, men en mer moden versjon vil inneholde muligheten til å spille flere enn to stykker samtidig. En skiller mellom seg selv og andre ved bruk av ulike farger på spillernes miljøstasjon, våpen og forsvar. I prototypen er de to faksjonene farget rød og blå.
 
-I prototypen er hovedskjermen et statisk fugleperspektiv av alle øyene og alle spillets elementer. En ferdig versjon vil også inneholde muligheten til å veksle mellom et detaljbilde av spillerens egen øy og et overblikksbilde over alle øyer. Hvorvidt dette vil gjøres via en knapp som veksler mellom de to visningsmodi eller om en vil ''klype for å zoome'' er på dette stadiet noe uvisst og bør testes via brukertesting for å finne den optimale metoden.
+I prototypen er hovedskjermen et statisk fugleperspektiv av alle øyene og alle spillets elementer. En ferdig versjon vil også inneholde muligheten til å veksle mellom et detaljbilde av spillerens egen øy og et overblikksbilde over alle øyer. Hvorvidt dette vil gjøres via en knapp som veksler mellom de to visningsmodi eller om en vil ``klype for å zoome'' er på dette stadiet noe uvisst og bør testes via brukertesting for å finne den optimale metoden.
 
 \emph{Garbage Alert} er tenkt å først og fremst spilles på mobiltelefoner og andre enheter med berøringsskjerm. Man interagerer derfor med elementene på skjermen ved å trykke på de. Det man må være spesielt oppmerksom på med slike skjermer er å holde knapper store nok, samt at alle elementer på skjermen må være forskjellige nok til at det er enkelt å skille dem fra hverandre på små skjermer.
 
