--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -36,7 +36,7 @@ presentasjon, for å realisere den endelige protoypen.
 \emph{Garbage Alert}-prototypen slik den er i dag er implementert med de nye
 web-teknologiene (noe unøyaktig) kjent som HTML5. Mer nøyaktig vil dette
 si at spillet er implementert med et \texttt{<canvas>} element, et lite
-''malebrett'' som en kan tegne på programmatisk med JavaScript. Dette
+``malebrett'' som en kan tegne på programmatisk med JavaScript. Dette
 medfører at \emph{Garbage Alert} i prinsippet kan kjøres hvor som helst der en
 har en moderne nettleser med støtte for JavaScript. \emph{Garbage Alert} har
 moderne berøringsbaserte mobiltelefoner som hovedplattform, hvor slik
@@ -99,7 +99,7 @@ rammeverk er noe umodne.  Logisk kodestruktur og -arkitektur har ikke
 vært noe som har blitt tenkt mye på, og kun enkle grep har blitt gjort
 for å gjøre koden noe enklere å skrive. Dette gjelder spesielt den koden
 som har blitt arvet fra den tidligere prototypen, kode som med god grunn
-kan omtales som et ''lappeteppe''.
+kan omtales som et ``lappeteppe''.
 
 For å øke spillets modifiserbarhet og kodens lesbarhet er de ulike
 elementene i spillet delt inn i egne JavaScript-filer. Dette for å
