borders på alle figurer

--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -24,42 +24,53 @@ spilleren, og man ser effekten av dette i eksplosjonen.
 
 \begin{figure} [H]
 \centering
-\includegraphics[width=\textwidth]{images/Oppgradering.png}
+\setlength\fboxsep{0.2pt}
+\setlength\fboxrule{0.7pt}
+\fbox{\includegraphics[width=\textwidth]{images/Oppgradering.png}}
 \caption{Miljøstasjonen kan oppgraderes til å håndtere ulike typer avfallsgjenvinning.}
 \label{fig:Oppgradering}
 \end{figure}
 
 \begin{figure}
-\centering
-\includegraphics[scale=0.5]{images/Eksplosjon.png}
+\centering\setlength\fboxsep{0.2pt}
+\setlength\fboxrule{0.7pt}
+\fbox{\includegraphics[scale=0.5]{images/Eksplosjon.png}}
 \caption{Ved et angrep på en annen spiller vil et projektil avfyres og eksplodere på motspillerens eventuelle forsvarsstruktur.}
 \label{fig:Eksplosjon}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.5]{images/OppgradereMur.png}
+\setlength\fboxsep{0.2pt}
+\setlength\fboxrule{0.7pt}
+\fbox{\includegraphics[width=\textwidth]{images/OppgradereMur.png}}
 \caption{Spillerens forsvarsstruktur kan oppgraderes til å håndtere sterkere skyts fra motspilleren, avhengig av tilgjengelige ressurser.}
 \label{fig:OppgradereMur}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.5]{images/Tsunami.png}
+\setlength\fboxsep{0.2pt}
+\setlength\fboxrule{0.7pt}
+\fbox{\includegraphics[scale=0.5]{images/Tsunami.png}}
 \caption{Globale geohasarder kan oppstå som følge av mye global forsøpling, som for eksempel en tsunami.}
 \label{fig:Tsunami}
 \end{figure}
 
 \begin{figure} 
 \centering
-\includegraphics[scale=0.7]{images/Kolera.png}
+\setlength\fboxsep{0.2pt}
+\setlength\fboxrule{0.7pt}
+\fbox{\includegraphics[scale=0.7]{images/Kolera.png}}
 \caption{Lokale biohasarder kan oppstå som følge av mye lokal forurensning. Her er et sykdomsutbrudd.}
 \label{fig:Kolera}
 \end{figure}
 
 \begin{figure} [H]
 \centering
-\includegraphics{images/OppgradereEnv.png}
+\setlength\fboxsep{0.2pt}
+\setlength\fboxrule{0.7pt}
+\fbox{\includegraphics{images/OppgradereEnv.png}}
 \caption{Miljøstasjonens effektivitet kan oppgraderes slik at den gjenvinner mer materialer fra hver avfallsenhet.}
 \label{fig:OppgradereEnv}
 \end{figure}
