--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -12,7 +12,9 @@ denne prototypen. Et mål var å ha noe som fungerte, men samtidig
 realisere den med minimal bruk av tid.
 \begin{figure} [H]
 	\begin{center}
-	\includegraphics[scale=0.5]{images/screenshot_tidlig_prototype.png}
+	\setlength\fboxsep{0.2pt}
+	\setlength\fboxrule{0.7pt}
+	\fbox{\includegraphics[scale=0.5]{images/screenshot_tidlig_prototype.png}}
 	\end{center}
 	\caption{Skjermskudd av vår tidlige prototype}
 	\label{fig:screenshot_tidlig_prototype}
