--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -20,7 +20,7 @@ mellom 10 og 17 år.
 
 Man starter på en øy fylt til randen med søppel. Målet med spillet er å bli
 kvitt søppelet. Ved å gjenvinne avfallet får man ulike muligheter til å
-bombandere de andre spillerne, forsvare sin egen øy, for så å stå igjen
+bombardere de andre spillerne, forsvare sin egen øy, for så å stå igjen
 som vinneren på en øy uten søppel, eller som eneste spiller i live.
 
 Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i Team. Spilldesignerne og -utviklerne går under navnet \input{re3}. \input{re3} består av Andreas Røysland Aarnes, Trond Kjetil Bremnes, Christian Aleksander Lysne, Kjetil Mehl og Ina Sander Pedersen.
@@ -43,13 +43,13 @@ Spilldynamikken består gjerne av det å overvinne ens omgivelser ved
 utforskning og oppgaveløsning. Dette er videre forklart i ``Fundamentals
 of Game Design''~\cite{game_design}.
 
-Der finnes en hel rekke undersjangrer under eventyrsjangeren. Av spesiell interesse har pek-og-klikk- og action-eventyrsjangrene vært.
+Der finnes en hel rekke undersjangrer under eventyrsjangeren. Pek-og-klikk- og action-eventyrsjangrene har vært av spesiell interesse. 
 
 \begin{description}
 
 	\item[Pek-og-klikk-eventyr] \hfill \\
 
-	Her vil en styre protagonisten ved å peke hvor en vil gå, peke på objekter en vil interagere med og peke på andre mennesker en vil snakke med. Underveis samler en objekter som kan brukes andre steder i spillverden, enten direkte eller gjennom å kombinere gjenstander med hverandre for å skape nye gjenstander som gjør en  stand til å avansere i spillet.
+	Her vil en styre protagonisten ved å peke hvor en vil gå, peke på objekter en vil interagere med og peke på andre mennesker en vil snakke med. Underveis samler en objekter som kan brukes andre steder i spillverdenen, enten direkte eller gjennom å kombinere gjenstander med hverandre for å skape nye gjenstander som gjør en i stand til å avansere i spillet.
 
 	Populære spill i denne sjangeren er \emph{Lucas Arts'} \emph{Monkey Island}-serien og \emph{Funcoms} \emph{Den Lengste Reisen}.
 
