Lagt ved skjermskudd fra Advance Wars

--- a/konseptdokument/appendiks.tex
+++ b/konseptdokument/appendiks.tex
@@ -1,3 +1,4 @@
+%!TEX root = report.tex
 \appendix \pagenumbering{roman} \pagestyle{plain}
 \addcontentsline{toc}{section}{Appendiks}
 \section{Prisliste} \label{A}
@@ -23,5 +24,13 @@
 		\begin{center}
 		\includegraphics[width=\textwidth, angle=90]{images/EiTGantt}
 		\caption{Gantt-diagram}
+		\end{center}
+	\end{figure}
+
+\section{Advance Wars} \label{app:aw}
+\begin{figure} [H]
+		\begin{center}
+		\includegraphics[width=\textwidth]{images/screenshot_aw}
+		\caption{Skjermskudd fra Advance Wars \\ \copyright 2001 Intelligent Systems}
 		\end{center}
 	\end{figure}
