--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -6,7 +6,7 @@ skjermskudd.
 
 Den grafiske fremstillingen i spillet er ment å være leken og rettet mot
 barn i alle aldre, og er sterkt inspirert av den klassiske spillserien
-Advance Wars. Videre har det å holde ting oversiktlig og stort nok til å
+Advance Wars (se appendiks \ref{app:aw}). Videre har det å holde ting oversiktlig og stort nok til å
 trykkes på en berøringsskjerm vært noe vi har hatt spesielt i tankene
 når grensesnittet har blitt utformet. Det er lagt mer vekt på
 funksjonalitet, enn selve fremstillingen på denne delen av stadiet. Av
