Added some more, and updated references

--- a/konseptdokument/referanser.bib
+++ b/konseptdokument/referanser.bib
@@ -1,12 +1,12 @@
 @misc{Schwarz,
 	Author={Roger Schwarz},
 	Title={The skilled Facilitator},
-	Year=2002
+	Year={2002}
 }
 @misc{Johnson,
 	Author={Johnson, David W. and Johnson, Frank P.},
 	Title={Joining together: Group theory and group skills (4th ed.)},
-	Year=1991
+	Year={1991}
 }
 @misc{bonos,
 	Author={de Bono, Edward},
@@ -25,17 +25,17 @@ Management},
 	Author={Prestvik, Tore},
 	Title={Mineralogi: en innføring i krystallografi og mineralogi},
 	Howpublished={Vett og Viten},
-	Year={2005}
+	Year=2005
 }
 
 @misc{game_design,
 	Author={Rollings, Andrew and Adams, Ernest},
 	Title={Fundamentals of Game Design, Prentice Hall},
-	Year={2006}
+	Year=2006
 }
 
 @online{online:agile_manifesto,
-	author = {Kent Beck and
+	Author = {Kent Beck and
 	 Mike Beedle and 
 	 Arie van Bennekum and
 	 Alistair Cockburn and
@@ -52,7 +52,7 @@ Management},
 	 Ken Schwaber and
 	 Jeff Sutherland and
 	 Dave Thomas},
-	 year = {2001},
+	 Year =2001,
 	 title = {Manifesto for Agile Software Development},
 	url = {http://agilemanifesto.org/}
 }
@@ -60,7 +60,13 @@ Management},
 @misc{sjanger,
 	Author={Thomas H. Apperley},
 	Title={Genre and game studies: Toward a critical approach to video game genres},
-	Year={2006},
+	Year=2006,
 	Howpublished={Sage Publications},
 	url={http://sag.sagepub.com/content/37/1/6.full.pdf+html}
+}
+@misc{bates,
+	Author={Bates, Bob},
+	Title={Game Design},
+	Year=2004,
+	Howpublished={Thomson Course Technology}
 }
