--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -128,7 +128,7 @@ Den totale våpenkraften som har blitt brukt av alle spillerne er med på å øk
 
 
 \subsubsection{Geohasarder}
-Geologiske katastrofer kan intreffe som et resultat av global oppvarmning og mekanisk påvirkning fra mennesker.
+Geologiske katastrofer kan intreffe som et resultat av global oppvarming og mekanisk påvirkning fra mennesker.
 Et eksempel på en global geologisk katastrofe som kan inntreffe er tsunamier. En tsunami vil gjøre skade på den eventuelle muren spilleren har og muligens også ødelegge våpen og miljøstasjon utover dette. Hvorvidt dette skjer vil bero på murens styrke, som i sin tur beror på murens byggemateriale, og resterende helsepoeng. Eksempler på lokale geologiske katastrofer er jordskjelv og kolliderende isfjell. Jordskjelv gjør en liten skade på alle bygninger på øyen, og et isfjell som kolliderer med øya vil gjøre skade på muren, og muligens ødelegge den avhengig av murens styrke. 
 
 % Si noe om at disse elementene ikke er ferdige?
