--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -98,19 +98,20 @@ Ved å ha med ''gjenbruk og resirkulering'' kan en lage et spill med
 grunnlag i biologiske og kjemiske prosesser. I tillegg åpner det opp for å bruke geologi ved å inkludere spillementer basert på mineralogi og geologiske hendelser. 
 
 \subsection{Prosessen}
-Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en problemstilling, til en idé og til slutt et konsept. For utvikling og realisering av konsepte ble det benyttet en iterativ og smidig arbeidsmetode \cite{online:agile_manifesto} basert på Scrum-metodikken \cite{Scrum}. Her vil en dele opp arbeidet i mindre, mer håndterlige deler en raskt kan fullføre, for videre å teste ut disse elementene for å se hva som fungerer bra og hva som fungerer mindre bra. I praksis vil dette si at gruppen raskt skapte en spillbar prototype hvor ting ble prøvd ut, for så å iterativt utvide denne til stadig mer avanserte prototyper basert på erfaringene gruppen gjorde seg underveis.
+Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en problemstilling til en idé, og deretter til et konsept. For utvikling og realisering av konseptet ble det benyttet en iterativ og smidig arbeidsmetode \cite{online:agile_manifesto} basert på Scrum-metodikken \cite{Scrum}. Her vil en dele opp arbeidet i mindre og lettere håndterbare deler en raskt kan fullføre, for videre å teste ut disse elementene for å se hva som fungerer bra og hva som fungerer mindre bra. I praksis vil dette si at gruppen raskt skapte en spillbar prototype hvor ulike ting ble prøvd ut, for så å iterativt utvide denne til stadig mer avanserte prototyper basert på erfaringene gruppen gjorde seg underveis.
 
-Den største fordelen ved å gjøre det på denne måten er at en raskt kan justere ens kurs og retning basert på erfaringer man gjør seg opp. 
-Den største bakdelen med denne metodikken er at en raskt skaper en del kode og gjør en del arbeid for å skape en enkel prototype som ikke kan brukes videre.
-I forhold til dette faget hvor målet var å produsere en enkel prototype var denne metodikken svært passende, spesielt da det er mulig å hele tiden er mulig å fryse utviklingen når prototypen er ''avansert nok''.
+Den største fordelen ved å gjøre det på denne måten er at en raskt kan justere utviklingens kurs og retning basert på erfaringer underveis. 
+Den største baksiden med denne metodikken er at en skaper en del kode og gjør en del arbeid for å skape en enkel prototype som ikke kan brukes videre.
+I forhold til dette faget, hvor målet var å produsere en enkel prototype, var denne metodikken svært passende, spesielt da det var mulig å fryse utviklingen underveis da prototypen var ''avansert nok''.
 
 
-En enkelt Gantt-diagram (se appendiks \ref{app:Gantt}) ble produsert for å prøve å ha en viss oversikt over hva som burde og hva som må være ferdig til gitte tider, samt overslag over hvor lang tid ting vil ta.
+Et enkelt Gantt-diagram (se appendiks \ref{app:Gantt}) ble produsert for å prøve å ha en viss oversikt over hva som burde og hva som må være ferdig til gitte tider, samt overslag over hvor lang tid ting ville ta.
 Morgenmøter ble holdt på starten av hver onsdag, hvor gruppens medlemmer forteller om hva de har gjort siden sist og hva de planlegger å gjøre fram til neste morgenmøte. Dette for å sørge for at alle til enhver tid var oppdaterte på hva som skjer og må gjøres framover.
-Allikevel, på grunn av at gruppen til enhver tid jobbet tett sammen, var det en jevn flyt av informasjon angående hva som skjer gjennom hele dagen.
+Allikevel, på grunn av at gruppen til enhver tid jobbet tett sammen, var det en jevn flyt av informasjon rundt hva som skjedde til enhver tid.
 
 
-Den første delen av prosessen var allikevel ikke utført iterativ, ettersom gruppen i praksis gikk fra en vagt definert problemstilling, til en idé, for så å redefinere ideen for å bedre passe den valgte problemstillingen. Prosessen gikk deretter fra idé til konsept.
+Den første delen av prosessen var likevel ikke utført iterativ, ettersom gruppen i praksis gikk fra en vagt definert problemstilling til en idé, for så å redefinere ideen til å bedre passe den valgte problemstillingen. Prosessen gikk deretter fra idé til konsept.
+
 \subsubsection{Fra problemstilling til idé}
 Det ble brukt mye tid på å utforske forskjellige ideer som var
 interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
