--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -86,7 +86,7 @@ Det ble også ytret ønske om at spillmekanikken skulle foregå både på et
 mikroskopisk nivå (lokalt) og et makroskopisk nivå (globalt). Ved å
 deretter bake inn grunnstenene — resirkulering og
 gjenbruk — ble problemstillingen forfattet.
-\subsubsection{Problemstillingen}\label{sec:problemstilling}
+\subsubsection{Problemstillingen}
 Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 \begin{quotation}
 \large\emph{"\input{../problemstilling}"}
