Justeringer på avslutninga

--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -1,10 +1,11 @@
+%!TEX root = report.tex
 \section{Avslutning}\label{sec:conclusion}
 Denne seksjonen vil relatere prosjektet i forhold til spilldesign som
-felt og diskutere spillets samfunnsnytte og forklare hva som er tenkt
+felt og diskutere samfunnsnytten til \emph{Garbage Alert} og forklare hva som er tenkt
 rundt videre arbeid.
 
-\subsection{Garbage Alert, i en større sammenheng}
-Spillutforming på et generelt nivå starter ofte med en idè~\ref{bates},
+\subsection{asdfghjkl}
+Spillutforming på et generelt nivå starter ofte med en idé~\cite{bates},
 eller en modifisering av et eksisterende konsept. Prosessen videre
 varierer veldig fra utvikler til utvikler og selskap til selskap, men en
 del fellestrekk finnes:
@@ -20,7 +21,7 @@ alt i et designdokument. Dette dokumentet kan bli brukt som et rent
 oppslagsverk for utviklere, og vil konstant være i endring. En felles
 arbeidsflate for dette (en egen wiki eller lignende) blir også ofte brukt.
 
-Måten Re³ designet Garbage Alert på, har klare trekk med den generelle
+Måten Re³ designet \emph{Garbage Alert} på, har klare trekk til felles med den generelle
 måten å drive spillutforming på. Etter at konseptet var unnfanget ble
 det fokusert på å lage spillskisser, både av verdenen (øyene), og av
 viktige elementer som miljøstasjonen. Det ble brukt mye tid på å finne
@@ -30,7 +31,7 @@ verdifull tilbakemelding til den videre spillutformingen.
 
 Om det er noe gruppen føler det burde ha gjort annerledes må det nok
 være å lage en mer fullstendig prototype. Av erfaring viser dette seg å
-ta ganske lang tid, og tidsaspektet for prosjektet var for kort.
+ta ganske lang tid, og tidsaspektet for prosjektet var for kort. Bedre dokumentasjon av de avgjørelser og konsepter som ble utviklet underveis burde og ha vært tilstede. Mye ble skrevet ned, men mye ble og kun holdt muntlig.
 
 \subsection{Spillets samfunnsnytte}
 \emph{Garbage Alert} har som mål å belyse nytten av gjenbruk og resirkulering, lokalt og globalt, gjennom et flerspiller dataspill (se seksjon \ref{sec:problemstilling}).
