--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -113,43 +113,42 @@ Allikevel, på grunn av at gruppen til enhver tid jobbet tett sammen, var det en
 Den første delen av prosessen var likevel ikke utført iterativ, ettersom gruppen i praksis gikk fra en vagt definert problemstilling til en idé, for så å redefinere ideen til å bedre passe den valgte problemstillingen. Prosessen gikk deretter fra idé til konsept.
 
 \subsubsection{Fra problemstilling til idé}
-Det ble brukt mye tid på å utforske forskjellige ideer som var
+Det ble brukt mye tid på å utforske ulike ideer som var
 interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
 problemstillingen, og eksperimenterte derfor med forskjellige ideer.
 Gitt problemstillingen i seksjon~\ref{sec:problemstilling} var det
 naturlig å tenke på et spill som var turbasert eller sanntidsspill med
-flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i konseptet. Med fokus rundt dette ble den første ideen skapt.
+flere spillere. Det stod også sentralt å bruke hele gruppens kompetanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i konseptet. Med fokus rundt dette ble den første ideen skapt.
 \begin{description}
 \item[Energispillet med flerspillermodus] \hfill\\
 Spillere skal organisere hver sin lille by, hvor fokuset er å forhandle
 med hverandre på grunnlag av hvilke energitype de forskjellige byene
 velger å gå for. En by som for eksempel fokuserer på kull kan raskt få
-mye ressurser, men ville påvirke sitt eget miljø lokalt, og senere hele
+mye ressurser, men vil påvirke sitt eget miljø lokalt, og senere hele
 miljøet globalt.
 \end{description}
-Etter tilbakemeldinger fra landsbylederen viste deg seg derimot at ideen
+Etter tilbakemeldinger fra landsbylederen viste det seg derimot at ideen
 ikke samsvarte godt nok med problemstillingen som var valgt. Dette førte
-til restrukturering av den opphavlige ideen, for å få mer fokus på
+til en restrukturering av den opphavelige ideen, for å skape et større fokus på
 gjenbruk og resirkulering. Følgende elementer fra ideen ble tatt med
 videre:
 \begin{itemize}
 	\item Flerspiller
 	\item Hver spiller har en base
-	\item Bruk av søppel som ressurser, istedenfor energi
+	\item Bruk av ressurser. 
 	\item Lokale faktorer kan påvirke det globale miljøet
 \end{itemize}
 \subsubsection{Redefinering av ideen}
 Den opprinnelige ideen utviklet seg dermed til et rent konkurransespill,
 med mindre fokus på sanking og utvinning, og mer fokus på gjenbruk av ressurser. 
-Det ble bestemt at hver øy skal starte som en "søppeløy", og målet til
-spilleren er å fjerne alt søppelet på sin øy.  Ressurser blir anskaffet
-ved å resirkulere søppelet på øya. Ved å legge inn denne varianten ble
-ideen mer konform med problemstillingen. Energispillet med
+Det ble bestemt at hver øy skal starte som en ''søppeløy'', der målet til
+spilleren er å fjerne alt søppelet fra øyen sin. Ressurser blir anskaffet
+ved å resirkulere søppelet på øya, framfor å utvinne energiressurser. Ved å legge inn denne varianten ble ideen mer konform med problemstillingen. Energispillet med
 flerspillermodus hadde en meget stor grad av geoteknologi og
 bioteknologi. Ettersom fokuset i spillet ble endret,
 forsvant disse sentrale fagområdene. Andreas og Ina fant en løsning
 på dette ved å innføre såkalte geohasarder og biohasarder i spillet (se
-seksjon~\ref{sec:hazards})
+seksjon~\ref{sec:hazards}), samt basere ressursene på mineralogi (se seksjon~\ref{sec:mineralogi}.
 
 
 
