--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -14,7 +14,7 @@
 Denne seksjonen forteller om de forskjellige spillelementene som finnes
 i \emph{Garbage Alert}.
 
-\subsubsection{Ressurser}
+\subsubsection{Ressurser} \label{mineralogi}
 Ressurser er et viktig element i \emph{Garbage Alert}. Ressursene er det som
 gjør at spillere kan utvikle basen sin, bygge forsvar og utvikle angrep.
 Valget av ressurser er basert på Mohs hardhetsskala av mineraler \cite{mohs}. Mohs hardhetskala er en liste over mineraler i rekkefølge etter absolutt hardhet, laget av geologen Friedrich Mohs. Hvert mineral skal kunne skrape mineralet som står foran på listen. Ressursene i \emph{Garbage Alert} er ikke helt korrekte i forhold til Mohs hardhetsskala, men ideen er at hver av de seks ressursene i spillet følger samme regel, nemlig at den ene ressursen er sterkere enn den andre og har mulighet til å ødelegge den. 
