--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -148,7 +148,7 @@ flerspillermodus hadde en meget stor grad av geoteknologi og
 bioteknologi. Ettersom fokuset i spillet ble endret,
 forsvant disse sentrale fagområdene. Andreas og Ina fant en løsning
 på dette ved å innføre såkalte geohasarder og biohasarder i spillet (se
-seksjon~\ref{sec:hazards}), samt basere ressursene på mineralogi (se seksjon~\ref{sec:mineralogi}.
+seksjon~\ref{sec:hazards}), samt basere ressursene på mineralogi (se seksjon~\ref{sec:mineralogi}).
 
 
 
