--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -1,6 +1,6 @@
 %!TEX root = report.tex
 \section{Teknisk utførelse}\label{sec:teknisk}
-Denne seksjonen vil detaljere hvordan \emph{Garbage Alert} per i dag er
+Denne seksjonen vil utdype hvordan \emph{Garbage Alert} per i dag er
 implementert, samt tanker om videre utvikling til en eventuell ferdig
 versjon.
 \subsection{Tidlig prototype}
