--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -4,7 +4,7 @@ Denne seksjonen vil relatere prosjektet i forhold til spilldesign som
 felt og diskutere samfunnsnytten til \emph{Garbage Alert} og forklare hva som er tenkt
 rundt videre arbeid.
 
-\subsection{asdfghjkl}
+\subsection{Konseptrealisering}
 Spillutforming på et generelt nivå starter ofte med en idé~\cite{bates},
 eller en modifisering av et eksisterende konsept. Prosessen videre
 varierer veldig fra utvikler til utvikler og selskap til selskap, men en
