--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -23,7 +23,7 @@ kvitt søppelet. Ved å gjenvinne avfallet får man ulike muligheter til å
 bombardere de andre spillerne, forsvare sin egen øy, for så å stå igjen
 som vinneren på en øy uten søppel, eller som eneste spiller i live.
 
-Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i Team. Spilldesignerne og -utviklerne går under navnet \input{re3}. \input{re3} består av Andreas Røysland Aarnes, Trond Kjetil Bremnes, Christian Aleksander Lysne, Kjetil Mehl og Ina Sander Pedersen.
+Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i Team. Spilldesignerne og -utviklerne går under navnet Re³. Re³ består av Andreas Røysland Aarnes, Trond Kjetil Bremnes, Christian Aleksander Lysne, Kjetil Mehl og Ina Sander Pedersen.
 
 Målet med denne seksjonen er å gi deg et innblikk i det utviklede
 spillkonseptet, hvilke spillaspekter som er tatt med og spillets
@@ -155,7 +155,7 @@ Når en øy er helt overfylt med søppel vil den synke ned i havet. Dette gjør 
 
 \subsection{Gameplay og taktikker}
 
-Dette avsnittet vil ta for seg et typisk spill, spilt av tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing utført av \input{re3}. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og helsepoeng vil ikke gis i detalj.
+Dette avsnittet vil ta for seg et typisk spill, spilt av tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing utført av Re³. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og helsepoeng vil ikke gis i detalj.
 
 De tre deltakerne i spillet er: \emph{Professor}; \emph{MadMax}; og \emph{N00b87}. Spillet starter og hver spiller ser på en mørk øy fylt til randen av søppel. Det er en dyster og melankolsk stemning, og man får en følelse av at man har reist fram i tid til et post-apokalyptisk samfunn.
 
