oyen + gruppa retting

--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -120,7 +120,7 @@ enkelt av de ulike mobiltelefonoperativsystemene.}, noe som i
 begynnelsen var tanken. Dette ble gått bort fra da ikke alle på gruppen
 hadde de nødvendige verktøyene for å utvikle til
 plattformen\footnote{Der behøves en Apple Mac og en utviklerlisens, noe
-kun ett medlem av gruppa har.}. Da falt valget på å implementere
+kun ett medlem av gruppen har.}. Da falt valget på å implementere
 spille med web-teknologi. Dette førte med seg at flere kunne bidra til
 programmeringen både i kraft av at flere har erfaring med JavaScript
 fra før og at alle er i besittelse av de verktøy som behøves.
