Turned them tables

--- a/konseptdokument/appendiks.tex
+++ b/konseptdokument/appendiks.tex
@@ -22,7 +22,7 @@
 \section{Gantt-diagram} \label{app:Gantt}
 	\begin{figure} [H]
 		\begin{center}
-		\includegraphics[width=\textwidth, angle=90]{images/EiTGantt}
+		\includegraphics[width=\textwidth]{images/EiTGantt}
 		\caption{Gantt-diagram}
 		\end{center}
 	\end{figure}
